<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2012 Alexey Aksenov ezh@ezh.msk.ru.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and limitations under the License.
-->
<resources>

    <string name="error_digicontrol_not_found">DigiControl not found</string>
    <string name="error_digicontrol_not_found_title">DigiControl connection failed</string>
    <string name="error_digicontrol_not_found_content">Do you allow to %s it? DigiControl have a lot of things under the hood that required to start/stop/restart Digi components, interact with sessions and permissions and much more. It is mediator between installed components, plugins, your android device and you.&lt;br/>&lt;br/>&lt;i>&lt;small>DigiControl built without advertising, it is fully functional core under free of charge license. Read more in project description.&lt;/small>&lt;/i></string>
    <string name="error_digicontrol_service_failed">DigiControl service operation failed</string>
    <string name="error_digicontrol_minimum_version">Required minimum version of DigiControl: %1$s. Current version is %2$s</string>
    <string name="error_market_failed_title">Market failed</string>
    <string name="error_market_failed_content">Market application not found on the device</string>
    <string name="error_prepare_chmod">error_prepare_chmod</string>
    <string name="error_prepare_unknown">error_prepare_unknown</string>
    <string name="error_prepare_description">error_prepare_description</string>
    <string name="error_component_status_unavailable">%1$s component status unavailable</string>
    <string name="install">install</string>
    <string name="reinstall">reinstall</string>
    <string name="notify_n_files_copy_to_clipboard">There are component files that were copied to the device clipboard</string>
    <string name="notify_no_files_copy_to_clipboard">There are no component files to copy to the device clipboard</string>
    <string name="ask_control_newconnection_title">ask_control_newconnection_title</string>
    <string name="ask_control_newconnection_content">ask_control_newconnection_content</string>
    <string name="status_initializing">Initializing…</string>
    <string name="status_ready">Ready</string>
    <string name="status_active">Active</string>
    <string name="status_error">Error %1$s</string>
    <string name="status_busy">Busy</string>
    <string name="state_Initializing">&lt;font color="white">&lt;i>Initializing&lt;/i>&lt;/font></string>
    <string name="state_Broken">&lt;font color="red">Broken&lt;/font></string>
    <string name="state_Passive">Passive</string>
    <string name="state_Busy">&lt;font color="yellow">&lt;i>Busy&lt;/i>&lt;/font></string>
    <string name="state_Active">&lt;font color="white">Active&lt;/font></string>
    <string name="state_Unknown">Unknown</string>
    <string name="time_minutes">%1$02dm %2$02ds</string>
    <string name="time_hours">%1$dh %2$02dm %3$02ds</string>
    <string name="app_name">Unknown</string>
    <string name="report">report</string>
    <string name="quit">quit</string>
    <string name="report_hint">description</string>
    <string name="report_summary">Please give us a short summary</string>
    <string name="report_email">Contact email</string>
    <string name="loading">loading…</string>
    <string name="empty"></string>
    <string name="error_prepare_environment_failed">prepare environment failed</string>
    <string name="Disconnect_All">Disconnect All</string>
    <string name="session_title_user">&lt;b>%1$s&lt;/b> from %2$s to %3$s</string>
    <string name="session_title_nouser">%1$s to %2$s</string>
    <string name="session_description">%1$s</string>
    <string name="Apply">Apply</string>
    <string name="Cancel">Cancel</string>
    <string name="Back">Back</string>
    <string name="menu_help">Help</string>
    <string name="menu_gplay">Google Play</string>
    <string name="menu_report">Report</string>
    <string name="menu_control">DigiControl</string>
    <string name="menu_options">Options</string>
    <string name="preference_debug_level">Debug Level</string>
    <string name="preference_debug_level_description">Changing the debug levels</string>
    <string name="preference_debug_android">Android Logging</string>
    <string name="preference_debug_android_on">Built-in facility to log information to the android console. Enabled</string>
    <string name="preference_debug_android_off">Built-in facility to log information to the android console. Disabled</string>
    <string name="preference_layout">Interface Layout</string>
    <string name="preference_layout_description">Set preferred UI orientation</string>
    <string name="preference_show_dialog_welcome_off">&lt;Welcome> dialog disabled</string>
    <string name="preference_show_dialog_welcome_on">&lt;Welcome> dialog enabled</string>
    <string name="preference_show_dialog_welcome">Show &lt;Welcome> dialog</string>
    <string name="preference_show_dialog_rate_off">&lt;Rate It> dialog disabled</string>
    <string name="preference_show_dialog_rate_on">&lt;Rate It> dialog enabled</string>
    <string name="preference_show_dialog_rate">Show &lt;Rate It> dialog</string>
    <string name="preference_shutdown_timeout">Idle shutdown timeout</string>
    <string name="preference_shutdown_timeout_description">Graceful application shutdown with internal task killer</string>
    <string name="report_upload_failed">Some of the reports could not be uploaded to the Digimead Error Reporting service. Please try again later.</string>
    <string name="filechooser_menu_item_home">home</string>
    <string name="filechooser_menu_item_up">up</string>
    <string name="filechooser_sorting">sort</string>
    <string name="filechooser_menu_item_filter">filter</string>
    <string name="filechooser_copy">copy</string>
    <string name="filechooser_cut">cut</string>
    <string name="filechooser_paste">paste</string>
    <string name="filechooser_action_clear_clipboard">clear\nclipboard</string>
    <string name="filechooser_delete">delete</string>
    <string name="filechooser_no_entries">There are no entries to show</string>
    <string name="filechooser_path_header">Path > </string>

</resources>