<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/report_summary"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <EditText
        android:id="@android:id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/report_hint"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/report_email"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@android:id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>